tests/NormalTests/paczka1/fuzzy1/19912296.err
Error in line 9: zuCAfUl A989 63,1
Error in line 10: zuCAfUl S104 57,7
Error in line 21: A989 S104 74,9
Error in line 29: zuCAfUl S387 98,8
Error in line 31: A989 A989 25,2
